--- a/CurrencyProject/laravel_project/laravel/.env.example
+++ b/CurrencyProject/laravel_project/laravel/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql_currency_project
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=currency
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=secret_pass
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
